--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
-    <title>CAST</title>
+    <title>ToDo List Management</title>
 
 
      <!-- Angualr Material CSS -->
